# toggle-meister

./: .dockerfile  .dockerignore  .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  Dockerfile-dev  Dockerfile-ubuntu  cnpy-deployment.yaml  cron.py  cron.sh  deployment.md  docker-compose.yml  migrate-db.sh  pyproject.toml  readme.md  requirements.txt  run.py  serf.py  shippable.yml  startup.sh  tasks.py  wercker.yml
.docker/: config.json
.github/workflows/: main.yml
alembic/versions/: 21b664b587ce_create_initial_tables.py
auth/: auth.py
meister/: core.py
migrations/: env.py
migrations/versions/: 1693a9b29733_track_time_a_toggle_was_turned_on.py  21b664b587ce_create_initial_tables.py  3b0eac21d779_track_metrics.py  795cfbb52a87_add_auditing_table.py  af4279aa1f64_add_soft_delete_feature_table.py  c3be1b414b19_release_notes.py  e9288c901c60_add_rollouts.py  fa2cd0ecc30f_lower_case_production.py
serf/: core.py  dataaccess.py  db.py  environments.py  features.py  toggles.py
serf/alembic/: env.py
serf/static/: jspm.browser.js  package.json
tests/: test_stuff.py
tests/api/: main.py  run_api_tests.sh  test.yaml  test_api.py
tests/unit/: test_toggles.py
tmeister/: auditing.py  auth.py  core.py  cron.py  dataaccess.py  db.py  employees.py  environments.py  errorhandling.py  features.py  health.py  metrics.py  permissions.py  releases.py  security.py  squads.py  toggles.py
tmeister/dataaccess/: auditda.py  db.py  employeeda.py  environmentda.py  featureda.py  metricsda.py  releasesda.py  toggleda.py
tmeister/static/: .babelrc  index.html  jest.json  (+8 more)
(+99 files in other folders)
